--- a/refs.bib
+++ b/refs.bib
@@ -1,35 +1,53 @@
-@inproceedings{ypnos,
+@inproceedings{ypnos-damp10,
  author = {Orchard, Dominic A. and Bolingbroke, Max and Mycroft, Alan},
  title = {Ypnos: declarative, parallel structured grid programming},
  booktitle = {Proceedings of the 5th ACM SIGPLAN workshop on Declarative aspects of multicore programming},
- series = {DAMP '10},
  year = {2010},
- isbn = {978-1-60558-859-9},
- location = {Madrid, Spain},
- pages = {15--24},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1708046.1708053},
- doi = {10.1145/1708046.1708053},
- acmid = {1708053},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {comonads, edsl, parallelism, stencils, structured grids, ypnos},
+ url = {http://www.cl.cam.ac.uk/~dao29/publ/ypnos-damp10.pdf}
 } 
 
-@inproceedings{accel,
+@inproceedings{ypnos-dsl11,
+ author = {Orchard, Dominic and Mycroft, Alan},
+ title = {Efficient and Correct Stencil Computation via Pattern Matching and Static Typing},
+ booktitle = {Proceedings IFIP Working Conference on Domain-Specific Languages},
+ year = {2011},
+ url = {http://arxiv.org/pdf/1109.0777v1.pdf}
+}
+
+@inproceedings{acc-damp11,
  author = {Chakravarty, Manuel M.T. and Keller, Gabriele and Lee, Sean and McDonell, Trevor L. and Grover, Vinod},
  title = {Accelerating Haskell array codes with multicore GPUs},
  booktitle = {Proceedings of the sixth workshop on Declarative aspects of multicore programming},
- series = {DAMP '11},
  year = {2011},
- isbn = {978-1-4503-0486-3},
- location = {Austin, Texas, USA},
- pages = {3--14},
- numpages = {12},
- url = {http://doi.acm.org/10.1145/1926354.1926358},
- doi = {10.1145/1926354.1926358},
- acmid = {1926358},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {arrays, data parallelism, dynamic compilation, gpgpu, haskell, skeletons},
+ url = {http://www.cse.unsw.edu.au/~chak/papers/acc-cuda.pdf},
+ keywords = {arrays, data parallelism, dynamic compilation, gpgpu, haskell, skeletons}
 } 
+
+@article{cockburn08,
+ author = {Cockburn, Alistair},
+ title = {Using both incremental and iterative development},
+ journal = {CrossTalk},
+ month = {May},
+ year = {2008},
+ url = {http://www.crosstalkonline.org/storage/issue-archives/2008/200805/200805-Cockburn.pdf}
+}
+
+@online{acc-wiki,
+ author = {McDonell, Trevor L.},
+ title = {Accelerate tutorial},
+ url = {https://github.com/AccelerateHS/accelerate/wiki}
+}
+
+@online{acc-hackage,
+ author = {Chakravarty, Manuel M T},
+ title = {Accelerate package documentation},
+ url = {http://hackage.haskell.org/packages/archive/accelerate/0.12.1.0/doc/html/Data-Array-Accelerate.html}
+}
+
+@online{green96,
+ author = {Green, T.R.G.},
+ title = {An Introduction to the Cognitive Dimensions Framework},
+ month = {November},
+ year = {1996},
+ url = {http://homepage.ntlworld.com/greenery/workStuff/Papers/introCogDims/index.html}
+}
