--- a/proposal.tex
+++ b/proposal.tex
@@ -31,13 +31,14 @@ Originator: D. A. Orchard
 \textbf{Director of Studies:} Dr A. R. Beresford
 \vspace{0.2in}
 \noindent
- 
+
 \noindent
 \textbf{Project Overseers:} Dr A. Madhavapeddy \& Dr M. Kuhn
 
+\bibliographystyle{plain}
+
 \include{propbody}
 
+\bibliography{refs}
+
 \end{document}
-
-
-
